testsuite/tests/builtins/str_methods/substring/missing_low_param/test.out
Error: No value for parameter
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(s.substring(high=1))
   │       ─────────┬─────────  
   │                ╰─────────── Missing value for the "low" parameter
───╯
